--- a/Api/composer.json
+++ b/Api/composer.json
@@ -11,7 +11,8 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"guzzlehttp/guzzle": "7.0"
+		"guzzlehttp/guzzle": "7.0",
+		"cloudinary/cloudinary_php": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
