--- a/Mobile/gofits/pubspec.yaml
+++ b/Mobile/gofits/pubspec.yaml
@@ -23,16 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  introduction_screen: ^1.0.7
-  flutter_icons: ^1.1.0
   device_preview: ^0.4.8
-  shared_preferences: ^0.5.10
+  dio: ^3.0.10
+  flutter_icons: ^1.1.0
+  flutter_redux: ^0.6.0
   flutter_staggered_grid_view: ^0.3.2
+  fluttertoast: ^7.0.2
+  introduction_screen: ^1.0.7
+  redux: ^4.0.0+3
+  redux_logging: ^0.4.0
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +41,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -52,14 +52,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/foodImages/
     - assets/icons/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
